--- a/xperiences/merchants/templates/merchants/account.html
+++ b/xperiences/merchants/templates/merchants/account.html
@@ -3,125 +3,119 @@
 {% load x_tags %}
 
 {% block content %}
-    <div class="main-content">
-        <div class="command-bar-container">
-            <div class="command-bar">
-                <ul>
-                    <li><a href="/experiences/add_experience">Add new listing</a></li>
-                    <li><a href="/merchants/experiences">View all your listings</a></li>
-                    <li><a href="/merchants/inbox">Inbox</a></li>
-                    <li><a href="/merchants/account">Account</a></li>
-                </ul>
-            </div>
-        </div>
-        <fieldset>
-            <h2>Your public profile </h2>
-            <div class="input-group">
-                <label class="label" for="profile-image">Profile Picture</label>
-                <div class="change-profile-image">
-                    <div class="image-wrapper">{% include 'profile_image.html' with user_extension=merchant %}</div>
-                    <input type="file" class="upload-new-profile-image" id="profile-image" name="profile-image" size="15">
-                </div>
-            </div>
-            <hr>
-            <div class="input-group">
-                <label class="label" for="name">Your name</label>
-                <input type="text" name="name" id="name" value="{{ merchant.name }}"><a href="#">Edit</a>
-            </div>
-            <hr>
-            <div class="input-group">
-                <label class="label" for="address">Your address</label>
-                <input type="text" name="name" id="address" value="{{ merchant.address }}"><a href="#">Edit</a>
-            </div>
-            <hr>
-            <div class="input-group">
-                <label class="label" for="about">About you</label>
-                <textarea name="about" id="about" value="{{ form.description.value }}" style="overflow-x: hidden; overflow-y: hidden; height: 75px;"></textarea>
-                <a href="#">Edit</a>
-            </div>
-        </fieldset>
+<div class="container">
+	<div class="space30"></div>
+	{% include "merchants/command_bar.html" %}
+	<div class="column span9">
+		<fieldset class="panel row">
+			<div class="pad15">
+				<h2>Your public profile </h2>
+				<div class="input-group">
+					<label class="label" for="profile-image">Profile Picture</label>
+					<div class="change-profile-image">
+						<div class="image-wrapper">{% include 'profile_image.html' with user_extension=merchant %}</div>
+						<input type="file" class="upload-new-profile-image" id="profile-image" name="profile-image" size="15">
+					</div>
+				</div>
+				<div class="input-group">
+					<label class="label" for="name">Your name</label>
+					<input class="span6" type="text" name="name" id="name" value="{{ merchant.name }}">
+				</div>
+				<div class="input-group">
+					<label class="label" for="address">Your address</label>
+					<input class="span6" type="text" name="name" id="address" value="{{ merchant.address }}">
+				</div>
+				<div class="input-group">
+					<label class="label" for="about">About you</label>
+					<textarea class="span6" name="about" id="about" value="{{ form.description.value }}" style="overflow-x: hidden; overflow-y: hidden; height: 75px;"></textarea>
+				</div>
+			</div>
+		</fieldset>
 
-        <fieldset>
-            <h2>Completed earnings</h2>
-            <ul>
-                <li>
-                    <div class="listing-item-short">
-                        <div>Date</div>
-                        <div class="listing-value">27/12/2012</div>
-                    </div>
-                    <div class="listing-item-short">
-                        <div>Money earned</div>
-                        <div class="listing-value">$100</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="listing-item-short">
-
-                        <div class="listing-value">27/12/2012</div>
-                    </div>
-                    <div class="listing-item-short">
-
-                        <div class="listing-value">$100</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="listing-item-short">
-
-                        <div class="listing-value">27/12/2012</div>
-                    </div>
-                    <div class="listing-item-short">
-                        <div class="listing-value">$100</div>
-                    </div>
-                </li>
-            </ul>
-        </fieldset>
-    </div>
-    <div id="experiences"></div>
+		<fieldset class="panel row">
+			<div class="pad15">
+						<h2>Completed earnings</h2>
+						<ul>
+							<li>
+							<div class="listing-item-short">
+								<div>Date</div>
+								<div class="listing-value">27/12/2012</div>
+							</div>
+							<div class="listing-item-short">
+								<div>Money earned</div>
+								<div class="listing-value">$100</div>
+							</div>
+							</li>
+							<li>
+							<div class="listing-item-short">
+			
+								<div class="listing-value">27/12/2012</div>
+							</div>
+							<div class="listing-item-short">
+			
+								<div class="listing-value">$100</div>
+							</div>
+							</li>
+							<li>
+							<div class="listing-item-short">
+			
+								<div class="listing-value">27/12/2012</div>
+							</div>
+							<div class="listing-item-short">
+								<div class="listing-value">$100</div>
+							</div>
+							</li>
+						</ul>
+			</div>
+		</fieldset>
+	</div>
+	<div id="experiences"></div>
+</div>
 
 
 <script type='text/x_jquery_templates' id='res_template'>
-    <li class="front-page-item">
-        <a href="/experiences/{% t_var slug_id %}">
-            <img alt="{% t_var title %}" {% t_if photo1 %}src="{% t_var photo1.url %}"{% t_endif %}/>
-        </a>
-        <div class="thumb-details">
-            <div class="fp-item-price">
-                <span class="currency-symbol">$</span>
-                {% t_var price %}
-                <span class="currency-code"></span>
-            </div>
-            <div class="fp-item-wrapper">
-                <div class="fp-item-title">
-                    <a title="{% t_var title %}" href="/experiences/{% t_var slug_id %}">{% t_var title %}</a>
-                </div>
-                <div class="fp-item-merchant">
-                    <a title="{% t_var merchant.name %}" href="">{% t_var merchant.name %}{% t_if merchant.city %}, {% t_var merchant.city %} {% t_var merchant.state %} {% t_endif %}</a>
-                </div>
-            </div>
-        </div>
-    </li>
+	<li class="front-page-item">
+	<a href="/experiences/{% t_var slug_id %}">
+		<img alt="{% t_var title %}" {% t_if photo1 %}src="{% t_var photo1.url %}"{% t_endif %}/>
+	</a>
+	<div class="thumb-details">
+		<div class="fp-item-price">
+			<span class="currency-symbol">$</span>
+			{% t_var price %}
+			<span class="currency-code"></span>
+		</div>
+		<div class="fp-item-wrapper">
+			<div class="fp-item-title">
+				<a title="{% t_var title %}" href="/experiences/{% t_var slug_id %}">{% t_var title %}</a>
+			</div>
+			<div class="fp-item-merchant">
+				<a title="{% t_var merchant.name %}" href="">{% t_var merchant.name %}{% t_if merchant.city %}, {% t_var merchant.city %} {% t_var merchant.state %} {% t_endif %}</a>
+			</div>
+		</div>
+	</div>
+	</li>
 </script>
 {% endblock %}
 
 {% block extra_scripts %}
 <script>
-var _merchant_id = '{{ marchent.id}}'
-function get_experiences(params) {
-    params = params || {};
-    $.get('/api/experiences/json', params, render);
-}
+	var _merchant_id = '{{ marchent.id}}'
+	function get_experiences(params) {
+		params = params || {};
+		$.get('/api/experiences/json', params, render);
+	}
 
 
-function render(data) {
-    var holder = $("#experiences");
-    $.each(data, function(idx, obj) {
-        $("#res_template").tmpl(obj).appendTo(holder);
-    });
-}
+	function render(data) {
+		var holder = $("#experiences");
+		$.each(data, function(idx, obj) {
+			$("#res_template").tmpl(obj).appendTo(holder);
+		});
+	}
 
 
-$(document).ready(function(){
-    get_experiences({"merchant_id": _merchant_id });
-});
+	$(document).ready(function(){
+		get_experiences({"merchant_id": _merchant_id });
+	});
 </script>
 {% endblock %}
