fixed merge issues

--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -296,6 +296,10 @@ footer a:hover {
 	float: right;
 }
 
+#seller-info {
+	text-align: center;
+}
+
 /*------------------------------------------------------------------------------*/
 /*	IMAGE CAROUSEL
 /*------------------------------------------------------------------------------*/
