--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -24,7 +24,7 @@
     <script src='/static/maps.js'></script>
    	<script src="http://use.typekit.com/qzv2oav.js"></script>
    	<script>try{Typekit.load();}catch(e){}</script>
-	<!--<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script> -->
+	<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script>
 	<script type="text/javascript">/* Google analytics */
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-27207596-2']);
