--- a/xperiences/experiences/templates/experiences/add_experience.html
+++ b/xperiences/experiences/templates/experiences/add_experience.html
@@ -27,6 +27,7 @@
 {% block content %}
 <div class="container">
 	<div class="space30"></div>
+	{% include "merchants/command_bar.html" %}
 	<div class="column span9">
 		<h1>Add listing form</h1><!-- we can change this title based on the niche-->
 		{{ form.errors }}
