--- a/xperiences/merchants/templates/merchants/inbox.html
+++ b/xperiences/merchants/templates/merchants/inbox.html
@@ -11,20 +11,22 @@
                     <div class="user">
                         <a class="user-image">
                         {% if message.sender %}
-                            {% include 'profile_image.html' with user_extension=message.sender %}
+                            <div class="image-wrapper" style='width:50px; height:50px; position:relative;'>
+                                <img alt="{{ message.sender.name }}" width="50" height="50" src="{% if message.sender.photo %}{{ message.sender.photo.url }}{% else %}http://graph.facebook.com/{{ message.sender.FB_ID }}/picture/?type=large{% endif %}" />
+                            </div>
                         {% endif %}
                         </a>
                         <div class="user-name">
                         {% if message.sender %}
                             {{ message.sender }}
-                        {% endif %}                 
+                        {% endif %}
                         </div>
                         <div class="user-location">
-                        {% comment %}{% if message.sender %}
+                        {% if message.sender %}
                             {{ message.sender.address }}
-                        {% endif %}  {% endcomment %}
+                        {% endif %}
                         </div>
-                    </div>    
+                    </div>
                     <div class="messsage-summary">
                         <a href="{% url view_message message.id %}">
                             <div class="message-title">{{ message.title }}</div><!-- is this correct? again, can't find the comments model -->
