Fixed typekit embed code

--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -22,8 +22,8 @@
     <script src='/static/jq.templates.js' ></script>
 	<!--    <script src='/static/js/jquery-ui-timepicker-addon.js' ></script> -->
     <script src='/static/maps.js'></script>
-   	<script src="http://use.typekit.com/qzv2oav.js"></script>
-   	<script>try{Typekit.load();}catch(e){}</script>
+	<script type="text/javascript" src="http://use.typekit.com/qvy1ycb.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	<script>$(document).ready(function() {image_autoscale($('.image-wrapper img'));});</script>
 	<script type="text/javascript">/* Google analytics */
 	var _gaq = _gaq || [];
