--- a/xperiences/merchants/templates/merchants/view_message.html
+++ b/xperiences/merchants/templates/merchants/view_message.html
@@ -8,7 +8,9 @@
             {{ status }}
             <div class="user">
             {% if message.sender %}
-                {% include 'profile_image.html' with user_extension=message.sender %}
+                <div class="image-wrapper" style='width:50px; height:50px; position:relative;'>
+                    <img alt="{{ message.sender.name }}" width="50" height="50" src="{% if message.sender.photo %}{{ message.sender.photo.url }}{% else %}http://graph.facebook.com/{{ message.sender.FB_ID }}/picture/?type=large{% endif %}" />
+                </div>
             {% endif %}
             <div class="user-name">
                 {{ message.sender }}
