--- a/xperiences/merchants/templates/merchants/account.html
+++ b/xperiences/merchants/templates/merchants/account.html
@@ -7,67 +7,65 @@
 	<div class="space30"></div>
 	{% include "merchants/command_bar.html" %}
 	<div class="column span9">
+		<h2>Your public profile </h2>
 		<fieldset class="panel row">
 			<div class="pad15">
-				<h2>Your public profile </h2>
-				<div class="input-group">
-					<label class="label" for="profile-image">Profile Picture</label>
-					<div class="change-profile-image">
-                        <div class="image-wrapper">{{ merchant.photo.url }}</div>
-						<input type="file" class="upload-new-profile-image" id="profile-image" name="profile-image" size="15">
-					</div>
+				<div class="row">
+								<div class="input-group">
+									<label class="label" for="profile-image">Profile Picture</label>
+									<div class="change-profile-image">
+				                        <div class="image-wrapper">{{ merchant.photo.url }}</div>
+										<input type="file" class="upload-new-profile-image" id="profile-image" name="profile-image" size="15">
+									</div>
+								</div>
 				</div>
-				<div class="input-group">
-					<label class="label" for="name">Your name</label>
-					<input class="span6" type="text" name="name" id="name" value="{{ merchant.name }}">
+				<div class="row">
+								<div class="input-group">
+									<label class="label" for="name">Your name</label>
+									<input class="span6" type="text" name="name" id="name" value="{{ merchant.name }}">
+								</div>
 				</div>
-				<div class="input-group">
-					<label class="label" for="address">Your address</label>
-					<input class="span6" type="text" name="name" id="address" value="{{ merchant.address }}">
+				<div class="row">
+								<div class="input-group">
+									<label class="label" for="address">Your address</label>
+									<input class="span6" type="text" name="name" id="address" value="{{ merchant.address }}">
+								</div>
 				</div>
-				<div class="input-group">
-					<label class="label" for="about">About you</label>
-					<textarea class="span6" name="about" id="about" value="{{ form.description.value }}" style="overflow-x: hidden; overflow-y: hidden; height: 75px;"></textarea>
-				</div>
+				<div class="row">
+								<div class="input-group">
+									<label class="label" for="about">About you</label>
+									<textarea class="span6" name="about" id="about" value="{{ form.description.value }}" style="overflow-x: hidden; overflow-y: hidden; height: 75px;"></textarea>
+								</div>
+							</div>
+							<div class="space30"></div>
+							<button class="btn">Save</button>
 			</div>
 		</fieldset>
 
 		<fieldset class="panel row">
 			<div class="pad15">
-						<h2>Completed earnings</h2>
-						<ul>
-							<li>
-							<div class="listing-item-short">
-								<div>Date</div>
-								<div class="listing-value">27/12/2012</div>
-							</div>
-							<div class="listing-item-short">
-								<div>Money earned</div>
-								<div class="listing-value">$100</div>
-							</div>
-							</li>
-							<li>
-							<div class="listing-item-short">
-			
-								<div class="listing-value">27/12/2012</div>
-							</div>
-							<div class="listing-item-short">
-			
-								<div class="listing-value">$100</div>
-							</div>
-							</li>
-							<li>
-							<div class="listing-item-short">
-			
-								<div class="listing-value">27/12/2012</div>
-							</div>
-							<div class="listing-item-short">
-								<div class="listing-value">$100</div>
-							</div>
-							</li>
-						</ul>
+				<h2>Completed earnings</h2>
 			</div>
+			<div class="listing-header">
+				<div class="listing-value">Money earned</div>
+				<div class="listing-date">Date</div>
+			</div>
+			<ul>
+				<li class="listing row">
+					<div class="listing-value">$100</div>
+					<div class="listing-date">27/12/2012</div>
+				</li>
+				<li class="listing row">
+					<div class="listing-value">$100</div>
+					<div class="listing-date">27/12/2012</div>
+				</li>
+				<li class="listing row">
+					<div class="listing-value">$100</div>
+					<div class="listing-date">27/12/2012</div>
+				</li>
+			</ul>
 		</fieldset>
+		<div class="clear"></div>
 	</div>
 	<div id="experiences"></div>
 </div>
