--- a/xperiences/media/css/base.css
+++ b/xperiences/media/css/base.css
@@ -63,6 +63,7 @@ table {
 h1, h2, h3, h4, h5, h6 {
 	font-weight: bold;
 	line-height: 1.5;
+	margin-bottom: 0.5em;
 }
 
 h1 {
@@ -100,6 +101,8 @@ hr {
  **/
 .container {
 	width: 960px;
+	min-height: 600px;
+	padding-bottom: 40px;
 	margin: 0 auto;
 	background: url(../images/grid.png);
 }
