--- a/xperiences/templates/base.html
+++ b/xperiences/templates/base.html
@@ -2,10 +2,8 @@
 
 {% block body %}
 	{% include "header.html" %}
-	<div class="content-body">
-		<!-- <div class="main-content">-->
+	<div class="container">
 			{% block content %}{% endblock %}
-			<!--		</div>-->
 	</div>
 	{% include "footer.html" %}
 {% endblock %}
