--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -625,7 +625,7 @@ button.hidden {
 	padding: 7px;
 	margin: 0px;
 	width: 220px;
-	border: solid 1px #e8dcc9;
+	border: solid 2px #D9D9D9;
 	background: #fefefe 
 }
 
