added FB comments to experience_profile

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -42,6 +42,7 @@
         <div class="description">
             {{ experience.description|safe }}
         </div>
+        <div class="fb-comments" data-href="http://naanprofit.com" data-num-posts="5" data-width="620"></div>
     </div><!-- close span8 column -->
     <div class="span4 column">
         <h1>&nbsp;</h1>
