--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -325,7 +325,7 @@ footer a:hover {
 
 .description {
 	display: inline-block;
-	padding-top: 15px; 
+	padding: 15px 0px; 
 	border-top: 1px solid #D9D9D9;
 }
 
